--- a/tutorial/0-models-and-events.html
+++ b/tutorial/0-models-and-events.html
@@ -54,7 +54,9 @@ myTweet.set('message', 'Hello, world!');
 /* Using the reference, get the message attribute of the model and display it:
  * http://backbonejs.org/#Model-get */
 
-// window.alert(YOUR CODE HERE);
+var messa = myTweet.get('message');
+
+window.alert(messa);
 
 /* - Backbone EVENTS ----------------------------------------------------------
  * Backbone gives us the ability to listen for events on our models,
@@ -80,12 +82,13 @@ myTweet.on('change',
   function(/* this event holds information about the change: */ e) {
     // Let ourselves know that something was changed:
     console.info('Something in this tweet model was changed!');
-    console.log(e);
+    // console.log(e);
 
     // Write code to log the changed attribute:
-    // console.log(YOUR CODE HERE);
+    console.log(e.changed);
   }
 );
+
 
 /* Backbone works through getters/setters. If you change something on
  * your model as if it were a plain old javascript object,
@@ -97,6 +100,7 @@ myTweet.on('change',
  * and write a one-liner that will make our `change` listener fire: */
 
 // myTweetYOUR CODE HERE;
+myTweet.set('message', 'Hello World2');
 
 /* Once you have the `change` event firing, move on to rendering! */
   </script>
