--- a/tutorial/3-collections.html
+++ b/tutorial/3-collections.html
@@ -96,9 +96,9 @@ var CommentsView = Backbone.View.extend({
   // Now we must render the collection:
   render: function() {
     var html = [
-      '<ul>',
+      '<ul>Comments: ',
       '</ul>',
-      '<span class="votes">',
+      '<span class="votes">Votes: ',
         // The total number of votes
         this.collection.reduce(function(memo, comment) {
           return memo + comment.get('votes');
@@ -110,7 +110,8 @@ var CommentsView = Backbone.View.extend({
     /* Render each model in the collection as a list item (<li>).
      * Remember, we have the underscore functions: */
     this.$el.find('ul').append(this.collection.map(function(comment) {
-      // YOUR CODE HERE
+      console.log(comment)
+      return '<li>' + comment.attributes.message + '</li>';
     }));
 
     return this.$el;
@@ -124,7 +125,9 @@ var commentList = [
   new Comment('Doug!'), // default to 0 votes
   new Comment('Doug?', 1),
   new Comment('Doug.', 2),
-  new Comment('"Doug".', 3),
+  new Comment('No, Bart.', 2),
+  new Comment('Bart.', 3),
+  new Comment('Hey Doug!', 3),
   new Comment('Doug?!', 4)];
 
 // Add all of these to a new collection:
@@ -134,7 +137,7 @@ var comments = new Comments(commentList);
 var commentsView = new CommentsView({ collection: comments });
 
 // Append it to the page (uncomment this when you are ready):
-// $('body').append(commentsView.render());
+$('body').append(commentsView.render());
     </script>
   </body>
 </html>
